# rpc

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
framework/: CMakeLists.txt  crypto_sources.cmake  custom_type.h  function.cpp  notes.txt  rpc-client.cpp  rpc-client.hpp  rpc-custom-type-serializer.hpp  rpc-server.cpp  rpc-server.hpp  rpc.cpp  rpc_custom_type_serializer_impl.hpp  rpc_sources.cmake  rpcfunc_sources.cmake  unisock.hpp
framework/crypto/: ecc.hpp  s_mp_rand_platform.c  tommath_private.h
rpcc/: CMakeLists.txt  rpcc.cpp  rpcc_sources.cmake
